--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@
 title: Gabriele Angeletti
 email: angeletti.gabriele@gmail.com
 description: >
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My blog about Artificial Intelligence, Machine Learning and related topics.
 baseurl: ""
 url: "http://www.gabrieleangeletti.com"
 fixedNav: 'true' # true or false
