--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = '/'
+baseURL = 'https://gabrieleangeletti.github.io/'
 languageCode = 'en-us'
 title = 'Gabriele Angeletti'
 theme = 'book'
